--- a/index.html
+++ b/index.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,viewport-fit=cover"><link href=./static/images/favicon.png rel=icon type=image/png><title>home</title><link rel=stylesheet href=./static/css/icons.css><link rel=stylesheet href=./static/css/uikit.css><link rel=stylesheet href=./static/css/style.css><link rel=stylesheet href=./static/css/tailwind.css><link href=./static/css/app.726d5cee6468742942c8420157a884a6.css rel=stylesheet></head><body><div id=app></div><script>(function(window, document, undefined) {
-            'use strict';
-            if (!('localStorage' in window)) return;
-            var nightMode = localStorage.getItem('gmtNightMode');
-            if (nightMode) {
-                document.documentElement.className += ' dark';
-            }
-        })(window, document);
-
-
-        (function(window, document, undefined) {
-
-            'use strict';
-
-            // Feature test
-            if (!('localStorage' in window)) return;
-
-            // Get our newly insert toggle
-            var nightMode = document.querySelector('#night-mode');
-            if (!nightMode) return;
-
-            // When clicked, toggle night mode on or off
-            nightMode.addEventListener('click', function(event) {
-                event.preventDefault();
-                document.documentElement.classList.toggle('dark');
-                if (document.documentElement.classList.contains('dark')) {
-                    localStorage.setItem('gmtNightMode', true);
-                    return;
-                }
-                localStorage.removeItem('gmtNightMode');
-            }, false);
-
-        })(window, document);</script><script type=text/javascript src=./static/js/manifest.41da8fceeeebaf4909e1.js></script><script type=text/javascript src=./static/js/vendor.65c3d9f24a9db1938d54.js></script><script type=text/javascript src=./static/js/app.7da4c844476c7501f726.js></script></body><script src=./static/js/tippy.all.min.js></script><script src=./static/js/jquery-3.3.1.min.js></script><script src=./static/js/uikit.js></script><script src=./static/js/simplebar.js></script><script src=./static/js/custom.js></script><script src=https://unpkg.com/ionicons@5.2.3/dist/ionicons.js></script></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,viewport-fit=cover"><link href=./static/images/favicon.png rel=icon type=image/png><title>home</title><link rel=stylesheet href=./static/css/icons.css><link rel=stylesheet href=./static/css/uikit.css><link rel=stylesheet href=./static/css/style.css><link rel=stylesheet href=./static/css/tailwind.css><link href=./static/css/app.b6da791b41fa56dfd3841d4658bf886e.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.4637b4f102f136785990.js></script><script type=text/javascript src=./static/js/vendor.18271a73c1a9b4136c45.js></script><script type=text/javascript src=./static/js/app.4551c4c6ba5c058e9a6d.js></script></body><script src=./static/js/tippy.all.min.js></script><script src=./static/js/jquery-3.3.1.min.js></script><script src=./static/js/uikit.js></script><script src=./static/js/simplebar.js></script><script src=./static/js/custom.js></script><script src=https://unpkg.com/ionicons@5.2.3/dist/ionicons.js></script></html>
